fix align-items

--- a/app/scss/blocks/_main-hero.scss
+++ b/app/scss/blocks/_main-hero.scss
@@ -43,7 +43,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: start;
-    align-items: start;
+    align-items: center;
     row-gap: 5px;
     min-height: 192px;
     padding: 20px;
